# signature_mahalanobis_knn

./: .gitignore  .pre-commit-config.yaml  Data.py  LICENCE  LICENSE  MANIFEST.in  README.md  example.ipynb  examples.ipynb  main.py  noxfile.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
data/: pen_digit_test.pkl
docs/: authors.rst  conf.py  index.md  index.rst  mahal_distance.rst  sig_mahal_knn.rst
examples/: example.ipynb
paper-examples/: Data.py  README.md  UCR_data_support.py  example2.ipynb  examples.ipynb  language_dataset_anomalies.ipynb  language_dataset_anomalies_data.ipynb  methods.py  pen_digit_anomalies.ipynb  pen_digit_anomalies_data.ipynb  requirements.txt  ship_movement_anomalies.ipynb  ship_movement_anomalies_data.ipynb  ucr_anomalies.ipynb  ucr_anomalies_data.ipynb
paper-examples/data/: results_beggel_et_al_2019_tables_2_and_4.csv
paper-examples/results/: language_dataset_isolation_forest_moments.csv  language_dataset_isolation_forest_signatures.csv  language_dataset_local_outlier_factor_moments.csv  language_dataset_local_outlier_factor_signatures.csv  language_dataset_signature_mahalanobis_knn.csv  pen_digit_isolation_forest_moments.csv  pen_digit_isolation_forest_signatures.csv  pen_digit_local_outlier_factor_moments.csv  pen_digit_local_outlier_factor_signatures.csv  pen_digit_signature_mahalanobis_knn.csv  ship_movement_isolation_forest_moments.csv  ship_movement_isolation_forest_signatures.csv  ship_movement_local_outlier_factor_moments.csv  ship_movement_local_outlier_factor_signatures.csv  ship_movement_signature_mahalanobis_knn.csv  ucr_comparison_table_1.csv  ucr_comparison_table_2.csv
sig_anomaly/: Distance.py  SigMahaKNN.py
signature_mahalanobis_knn.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
src/: mahal_distance.py
src/signature_mahalanobis_knn/: __init__.py  mahal_distance.py  sig_mahal_knn.py  utils.py
src/signature_mahalanobis_knn/baselines/: isolation_forest.py  local_outlier_factor.py  utils.py
src/signature_mahalanobis_knn/signature_mahalanobis_knn/: sig_mahal_knn.py
tests/: test_package.py
